open multple tabs from CLI

BUG=626873
TEST=headless_shell --remote-debugging-port=9222 https://www.google.com https://www.chromium.org https://cs.chromium.org

Review-Url: https://codereview.chromium.org/2609843002
Cr-Commit-Position: refs/heads/master@{#442899}

Former-commit-id: 14851efa455daad231261a89b13a8e588ff6ad5b